--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -6,6 +6,8 @@
               android:layout_marginRight="16dp"
               android:orientation="vertical">
 
+    <include layout="@layout/view_camera_and_title"/>
+
     <TextView
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
